@@ -4,6 +4,8 @@ Changes in version 1.026
 - Fixed negative indexing bugs in str_findprev* and ibuf_getstr_crlf
   functions.  Thanks Gerrit Pape.
 
+- Fixed bg-installer to not create directories in "dry-run" mode.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
